# hash-finder

./: Cargo.toml  README.md
.github/workflows/: clippy.yaml  tests.yaml
src/: cli.rs  ecosystem.rs  lib.rs  main.rs  no_ecosystem.rs  sha.rs  thread_pool.rs
src/no_ecosystem/: sha.rs  thread_pool.rs
