[package]
name = "hash-finder"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "hash_finder"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
rayon = { version = "1.10.0", optional = true }
sha256 = { version = "1.5.0", default-features = false, optional = true }

[features]
default = [
  # "ecosystem"
]
ecosystem = ["dep:rayon", "dep:sha256"]

[dev-dependencies]
sha256 = { version = "1.5.0", default-features = false }

[profile.test]
inherits = "release"

[lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"
